# snapcast_admin

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  version-bump.py
snapcast_admin/: __init__.py  cli.py  snapcast.py  util.py
tests/: __init__.py
