[tool.poetry]
name = "snapcast_admin"
version = "2.0.7"
description = ""
authors = ["June <june@peanut.one>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
b2sdk = "^1.29.0"
click = "^8.1.7"
requests = "^2.31.0"
wcwidth = "^0.2.12"
tqdm = "^4.66.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pre-commit = "^3.6.0"
ruff = "^0.1.9"
types-click = "^7.1.8"
types-requests = "^2.31.0.20231231"

[tool.poetry.scripts]
snapcast_admin = "snapcast_admin:cli"

[tool.mypy]
ignore_missing_imports = true  # 😔

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
    "ARG", "FA", "PERF",
    "A003",
    "ANN101",
    "D100", "D107", "D203", "D213", "D400",
    "FIX002",
    "TD002", "TD003",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
